--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	</li>
 		
 	       <li class="nav-item">
-		    <a class="nav-link dropdown-toggle" href="#Servico" id="navbarDropdownMenuLink" role="button"
+		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                        <span class="glyphicon glyphicon-usd"><b>Trabalho</b> </span> 
 		    </a>
@@ -108,7 +108,7 @@
 		</li>
 		
 		<li class="nav-item">
-		    <a class="nav-link dropdown-toggle" href="#Liks" id="navbarDropdownMenuLink" role="button"
+		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                        <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
 		    </a>
@@ -134,7 +134,7 @@
               </li>
 
         <li class="nav-item active">		
-            <a class="nav-link dropdown-toggle" href="#Contato" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><b>Contato</b> 
             </a>
 	     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -151,7 +151,7 @@
 	</li>
 		
 	    <li class="nav-item">
-                <a class="nav-link disabled" label="login" href="login.php">
+                <a class="nav-link disabled" href="login.php">
 		<span class="glyphicon glyphicon-log-in"><b>Login</b></span> </a>
              </li>
 	      
