--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=5521979371230">WhatsApp +55 (21) 97937-1230</a>	
                 <a class="dropdown-item" href="mailto:amgauna@gmail.com">email: amgauna@gmail.com</a>
                 <a class="dropdown-item" href="mailto:amgauna@outlook.com">email: amgauna@outlook.com</a>
-                <a class="dropdown-item" href="mailto:amgauna@yahoo.com">email: yahoo.com</a>
+                <a class="dropdown-item" href="mailto:amgauna@yahoo.com">email: amgauna@yahoo.com</a>
 		<a class="dropdown-item" href="mailto:anagauna@anagauna.eti.br">email: anagauna@anagauna.eti.br</a>
                 <a class="dropdown-item" href="mailto:amgauna@amgauna.com.br">email: amgauna@amgauna.com.br</a>					
             </div>
