--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	
     <!--  CSS / Font Awesome 4 Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
     <!--  Fim Font Awesome -->
 	
     <!-- AJAX / QUERY / JavaScrip / Bootstrap -->
