--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	
         <li class="nav-item active">
             <a class="nav-link" href="index.html"> <span class="sr-only">(Página atual)</span>
-		    <span class="glyphicon glyphicon-home sr-only"><b>Home </b></span> </a>
+		    <i class="fas fa-home"><b>Home </b></i> </a>
         </li>
 
 	<li class="nav-item">
@@ -83,21 +83,21 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		 <a class="dropdown-item" href="#"><b>O que quer saber?</b></a>
                 <a class="dropdown-item" href="sobre-mim.php">
-		        <span class="glyphicon glyphicon-briefcase">Sobre mim </span> </a>
+			<i class="fas fa-briefcase">Sobre mim </i> </a>
                 <a class="dropdown-item" href="artigos.php"> 
-		        <span class="glyphicon glyphicon-th-large">Artigos </span> </a> 					
+		        <i class="fas fa-th-large">Artigos </i> </a> 					
 		    <a class="dropdown-item" href="curriculo.php">Curriculo </a>				
 		        <a class="dropdown-item" href="api-twitter.php"> 					
-		        <span class="glyphicon glyphicon-cloud">Api Twitter </span> </a>						
+		        <i class="fas fa-cloud">Api Twitter </i> </a>						
                 <a class="dropdown-item" href="musicas/musicas.php"> 
-		        <span class="glyphicon glyphicon-film"> Youtube </span> </a>
+		        <i class="fas fa-film"> Youtube </i> </a>
               </div>
 	</li>
 		
 	       <li class="nav-item">
 		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       <span class="glyphicon glyphicon-usd"><b>Trabalho</b> </span> 
+                       <i class="fas fa-usd"><b>Trabalho</b> </i> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		        <a class="dropdown-item" href="#"><b>O que fazemos ?</b></a>
@@ -111,7 +111,7 @@
 		<li class="nav-item">
 		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
+                       <i class="fas fa-briefcase"><b>Links</b> </i> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		            <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
@@ -140,7 +140,7 @@
             </a>
 	     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="formulario-contato.php"> 
-	        <span class="glyphicon glyphicon-envelope"><b>Envie uma mensagem</b> </span> </a> 
+	        <i class="fas fa-envelope"><b>Envie uma mensagem</b> </i> </a> 
                 <a class="dropdown-item" href="#">Telefone: +55 (21) 2538-0399</a>
                 <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=5521979371230">WhatsApp +55 (21) 97937-1230</a>	
                 <a class="dropdown-item" href="mailto:amgauna@gmail.com">email: amgauna@gmail.com</a>
@@ -153,7 +153,7 @@
 		
 	    <li class="nav-item">
                 <a class="nav-link disabled" href="login.php">
-		<span class="glyphicon glyphicon-log-in"><b>Login</b></span> </a>
+		<i class="fas fa-log-in"><b>Login</b></i> </a>
              </li>
 	      
             <li class="nav-item">          
