--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 	<li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><b>Sobre</b>
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-handshake"> <b>Sobre</b>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		 <a class="dropdown-item" href="#"><b>O que quer saber?</b></a>
@@ -117,9 +117,9 @@
 		            <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Ana Gauna - Website Pessoal</a>
 			    <a class="dropdown-item" href="https://anagaunatech.blogspot.com">
-			    <a class="dropdown-item" href="https://facebook.com/anagaunatech">Ana Gauna - Facebook</a>
-			    <a class="dropdown-item" href="https://instagram.com/anagaunatech">Ana Gauna - Instagram</a>
-			    <a class="dropdown-item" href="https://twitter.com/anagaunatech">Ana Gauna - Twitter</a>
+			    <a class="dropdown-item" href="https://facebook.com/amgauna">Ana Gauna - Facebook</a>
+			    <a class="dropdown-item" href="https://instagram.com/amgauna">Ana Gauna - Instagram</a>
+			    <a class="dropdown-item" href="https://twitter.com/amgauna">Ana Gauna - Twitter</a>
 			    <a class="dropdown-item" href="https://linkedin.com/in/amgauna">Ana Gauna - Linkedin</a>			
 			    <a class="dropdown-item" href="https://github.com/amgauna">Ana Gauna - GitHUB</a>
 			    <a class="dropdown-item" href="https://behance.net/amgauna">Ana Gauna - Adobe Behance</a>
@@ -136,7 +136,7 @@
 
         <li class="nav-item active">		
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><b>Contato</b> 
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-address-book"> <b>Contato</b> 
             </a>
 	     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="formulario-contato.php"> 
