--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 	<li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-handshake"> <b>Sobre</b>
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-handshake"> <b>Sobre</b> </i>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		 <a class="dropdown-item" href="#"><b>O que quer saber?</b></a>
@@ -136,7 +136,7 @@
 
         <li class="nav-item active">		
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-address-book"> <b>Contato</b> 
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-address-book"> <b>Contato</b> </i>
             </a>
 	     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="formulario-contato.php"> 
