--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 	<li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-handshake"> <b>Sobre</b> </i>
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <b>Sobre</b>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		 <a class="dropdown-item" href="#"><b>O que quer saber?</b></a>
@@ -96,9 +96,7 @@
 		
 	       <li class="nav-item">
 		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       <i class="fas fa-usd"><b>Trabalho</b> </i> 
-		    </a>
+		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <b>Trabalho</b> </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		        <a class="dropdown-item" href="#"><b>O que fazemos ?</b></a>
 		        <a class="dropdown-item" href="html/webdeveloper.html">Web Developer</a>
@@ -110,9 +108,7 @@
 		
 		<li class="nav-item">
 		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       <i class="fas fa-briefcase"><b>Links</b> </i> 
-		    </a>
+		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <b>Links</b> </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		            <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Ana Gauna - Website Pessoal</a>
@@ -136,8 +132,7 @@
 
         <li class="nav-item active">		
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-address-book"> <b>Contato</b> </i>
-            </a>
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <b>Contato</b> </a>
 	     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="formulario-contato.php"> 
 	        <i class="fas fa-envelope"><b>Envie uma mensagem</b> </i> </a> 
@@ -150,11 +145,6 @@
                 <a class="dropdown-item" href="mailto:amgauna@amgauna.com.br">email: amgauna@amgauna.com.br</a>					
             </div>
 	</li>
-		
-	    <li class="nav-item">
-                <a class="nav-link disabled" href="login.php">
-		<i class="fas fa-log-in"><b>Login</b></i> </a>
-             </li>
 	      
             <li class="nav-item">          
 	        <form class="form-inline" action="#">
