--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <section>	 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="#"> <i class="fa fa-landmark"> <b>Menu</b> </i> </a>
+	<a class="navbar-brand" href="#"> <i class="fa fa-id-card"> <b>Menu </b> </i> </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
