--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
 
 	<li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <b>Sobre</b>
-            </a>
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-address-card"> <b>Sobre </b> </i> </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		 <a class="dropdown-item" href="#"><b>O que quer saber?</b></a>
                 <a class="dropdown-item" href="sobre-mim.php">
@@ -96,7 +95,7 @@
 		
 	       <li class="nav-item">
 		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <b>Trabalho</b> </a>
+		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-dollar-sign"> <b>Trabalho</b> </i> </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		        <a class="dropdown-item" href="#"><b>O que fazemos ?</b></a>
 		        <a class="dropdown-item" href="html/webdeveloper.html">Web Developer</a>
@@ -108,7 +107,7 @@
 		
 		<li class="nav-item">
 		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <b>Links</b> </a>
+		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-link"> <b>Links </b> </i> </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		            <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Ana Gauna - Website Pessoal</a>
@@ -132,7 +131,7 @@
 
         <li class="nav-item active">		
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <b>Contato</b> </a>
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-id-card"> <b>Contato</b> </i> </a>
 	     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="formulario-contato.php"> 
 	        <i class="fas fa-envelope"><b>Envie uma mensagem</b> </i> </a> 
