--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <section>	 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="#"> <i class="fa fa-id-card"> <b>Menu </b> </i> </a>
+	<a class="navbar-brand" href="#"> <i class="fa fa-bars"> <b>Menu </b> </i> </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
@@ -73,7 +73,7 @@
 	
         <li class="nav-item active">
             <a class="nav-link" href="index.html"> <span class="sr-only">(Página atual)</span>
-		    <i class="fas fa-home"><b>Home </b></i> </a>
+		    <i class="fas fa-home"><b>Home </b> </i> </a>
         </li>
 
 	<li class="nav-item">
@@ -95,7 +95,7 @@
 		
 	       <li class="nav-item">
 		    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-dollar-sign"> <b>Trabalho</b> </i> </a>
+		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-dollar-sign"> <b>Trabalho </b> </i> </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		        <a class="dropdown-item" href="#"><b>O que fazemos ?</b></a>
 		        <a class="dropdown-item" href="html/webdeveloper.html">Web Developer</a>
@@ -131,7 +131,7 @@
 
         <li class="nav-item active">		
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-id-card"> <b>Contato</b> </i> </a>
+	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-id-card"> <b>Contato </b> </i> </a>
 	     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="formulario-contato.php"> 
 	        <i class="fas fa-envelope"><b>Envie uma mensagem</b> </i> </a> 
