--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<i class="fas fa-briefcase">Sobre mim </i> </a>
                 <a class="dropdown-item" href="artigos.php"> 
 		        <i class="fas fa-th-large">Artigos </i> </a> 					
-		    <a class="dropdown-item" href="curriculo.php">Curriculo </a>				
+		    <a class="dropdown-item" href="curriculo.php"> <i class="fas fa-file-user"> Curriculo </a>				
 		        <a class="dropdown-item" href="api-twitter.php"> 					
 		        <i class="fas fa-cloud">Api Twitter </i> </a>						
                 <a class="dropdown-item" href="musicas/musicas.php"> 
