--- a/index.html
+++ b/index.html
@@ -81,14 +81,15 @@
 	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-address-card"> <b>Sobre </b> </i> </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 		 <a class="dropdown-item" href="#"><b>O que quer saber?</b></a>
-                <a class="dropdown-item" href="sobre-mim.php">
+                 <a class="dropdown-item" href="sobre-mim.php">
 			<i class="fas fa-briefcase">Sobre mim </i> </a>
-                <a class="dropdown-item" href="artigos.php"> 
+                 <a class="dropdown-item" href="artigos.php"> 
 		        <i class="fas fa-th-large">Artigos </i> </a> 					
-		    <a class="dropdown-item" href="curriculo.php"> <i class="fas fa-file-user"> Curriculo </i> </a>				
-		        <a class="dropdown-item" href="api-twitter.php"> 					
+		 <a class="dropdown-item" href="curriculo.php"> 
+			 <i class="fas fa-file-user"> Curriculo </i> </a>				
+		 <a class="dropdown-item" href="api-twitter.php"> 					
 		        <i class="fas fa-cloud">Api Twitter </i> </a>						
-                <a class="dropdown-item" href="musicas/musicas.php"> 
+                 <a class="dropdown-item" href="musicas/musicas.php"> 
 		        <i class="fas fa-film"> Youtube </i> </a>
               </div>
 	</li>
