--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
 <br>
     
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i> 
-                                                           <p> * IT Consultant <br> * Senior Software Analyst <br>
-          * Data Processing Technologist <br>                               * Web Developer (Backend)<br>
-          * IT Projects Web Management<br>                         * Windows Tech Support (1996-2025)<br>                               * Administration Technician (1985-1995) </p>
+          IT Consultant <br>
+          * Senior Software Analyst <br>
+          * Data Processing Technologist <br> 
+          * Web Developer (Backend)<br>
+          * IT Projects Web Management<br> 
+          * Windows Tech Support (1996-2025)<br>
+          * Administration Technician (1985-1995) </p>
                                                                                    
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Rio de Janeiro, RJ, Brazil</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i> email</p>
