--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
       
-<title>Ana Gauna (CV Resumido)</title>
+<title>W3.CSS Template</title>
       
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
