--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <base href="http://www.anagauna.dev.br" target="_sef">
+    <!-- <base href="http://www.anagauna.dev.br" target="_sef"> -->
 
     <!-- Charset = UTF-8 ou ISO-8859-1  -->
     <meta charset="UTF-8" lang="pt-br" />
